--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "pixi.js": "^8.1.5",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
