--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "bot": "node --watch bot/main.js"
+    "bot": "node --watch bots/tg-bot.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bun": "^1.1.18",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pixi.js": "^8.1.5",
+    "playwright": "^1.45.1",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
